2023-10-25T16:16:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6643207546 # 1299
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-25
* notice: last 14d: unq all: 5 4162
* notice: prev accum: outdated-unq outdated-all / unq all: 1775 168866 / 1813 173194
* notice: next accum: outdated-unq outdated-all / unq all: 1775 168866 / 1814 173289
* notice: prev exec diff / last date diff / accum: unq all: +1 +95 -2 -94 / +2 +206 -0 -0 / 2 206
* notice: removed / changed dates: [] / [2023-10-11 2023-10-25]

2023-10-25T08:17:28Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6637624767 # 1298
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-25
* notice: last 14d: unq all: 6 4161
* notice: prev accum: outdated-unq outdated-all / unq all: 1775 168866 / 1812 173083
* notice: next accum: outdated-unq outdated-all / unq all: 1775 168866 / 1813 173194
* notice: prev exec diff / last date diff / accum: unq all: +1 +111 -1 -120 / +1 +111 -0 -0 / 1 111
* notice: removed / changed dates: [] / [2023-10-11 2023-10-25]

2023-10-25T00:59:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6634348758 # 1297
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2023-10-25
* notice: last 14d: unq all: 6 4170
* notice: prev accum: outdated-unq outdated-all / unq all: 1772 168565 / 1812 172989
* notice: next accum: outdated-unq outdated-all / unq all: 1775 168866 / 1812 173083
* notice: prev exec diff / last date diff / accum: unq all: +0 +94 -0 -47 / +3 +301 -0 -0 / 3 301
* notice: removed / changed dates: [2023-10-10] / [2023-10-11 2023-10-24]

2023-10-24T16:17:26Z: