@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-13T01:00:58Z",
-  "count" : 307,
+  "timestamp" : "2023-10-26T00:57:58Z",
+  "count" : 256,
   "count_minmax" : [ 119, 307 ],
-  "count_decinc" : [ -0, +307 ],
+  "count_decinc" : [ -51, +307 ],
   "uniques" : 3,
   "uniques_minmax" : [ 3, 3 ],
   "uniques_decinc" : [ -0, +3 ]
