@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-10-25T16:16:48Z",
-  "count" : 206,
-  "count_minmax" : [ 111, 206 ],
-  "count_decinc" : [ -0, +206 ],
+  "timestamp" : "2023-10-26T00:57:58Z",
+  "count" : 299,
+  "count_minmax" : [ 111, 299 ],
+  "count_decinc" : [ -0, +299 ],
   "uniques" : 2,
   "uniques_minmax" : [ 1, 2 ],
   "uniques_decinc" : [ -0, +2 ]
