@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2023-10-25T16:16:48Z",
-  "count_outdated" : 168866,
-  "uniques_outdated" : 1775,
-  "count" : 173289,
+  "timestamp" : "2023-10-26T00:57:58Z",
+  "count_outdated" : 169167,
+  "uniques_outdated" : 1779,
+  "count" : 173382,
   "uniques" : 1814,
   "clones" : [
     {
-      "timestamp": "2023-10-11T00:00:00Z",
-      "count": 40,
-      "count_minmax": [ 40, 301 ],
-      "count_decinc": [ 261, 301 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 4 ],
-      "uniques_decinc": [ 3, 4 ]
-    },
-    {
       "timestamp": "2023-10-12T00:00:00Z",
-      "count": 307,
+      "count": 256,
       "count_minmax": [ 119, 307 ],
-      "count_decinc": [ 0, 307 ],
+      "count_decinc": [ 51, 307 ],
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2023-10-25T00:00:00Z",
-      "count": 206,
-      "count_minmax": [ 111, 206 ],
-      "count_decinc": [ 0, 206 ],
+      "count": 299,
+      "count_minmax": [ 111, 299 ],
+      "count_decinc": [ 0, 299 ],
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
