@@ -1,15 +1,10 @@
 {
-  "count": 4162,
+  "count": 4164,
   "uniques": 5,
   "clones": [
     {
-      "timestamp": "2023-10-11T00:00:00Z",
-      "count": 40,
-      "uniques": 1
-    },
-    {
       "timestamp": "2023-10-12T00:00:00Z",
-      "count": 307,
+      "count": 256,
       "uniques": 3
     },
     {
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2023-10-25T00:00:00Z",
-      "count": 206,
+      "count": 299,
       "uniques": 2
     }
   ]
